[gd_scene load_steps=4 format=3 uid="uid://3qp058m72h8i"]

[ext_resource type="Script" uid="uid://dw4llpluhhr62" path="res://ayuda.gd" id="1_w45k5"]
[ext_resource type="Texture2D" uid="uid://8wff15gmvtph" path="res://Sprites/Cruz.png" id="2_j5q7l"]
[ext_resource type="Texture2D" uid="uid://dcq6t5kgmqm1d" path="res://Sprites/siguiente.png" id="3_vspjj"]

[node name="Ayuda" type="Node2D"]
script = ExtResource("1_w45k5")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Cancelar" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -196.0
offset_top = 29.0
offset_right = -61.0
offset_bottom = 161.0
grow_horizontal = 0
texture_normal = ExtResource("2_j5q7l")
ignore_texture_size = true
stretch_mode = 0

[node name="Siguiente" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 10.0
offset_top = 3.0
offset_right = 130.0
offset_bottom = 126.0
grow_horizontal = 2
texture_normal = ExtResource("3_vspjj")
ignore_texture_size = true
stretch_mode = 0

[node name="Atras" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -9.0
offset_top = 130.0
offset_right = 115.0
offset_bottom = 257.0
grow_horizontal = 2
rotation = 3.14159
texture_normal = ExtResource("3_vspjj")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="TextureRect/Cancelar" to="." method="_on_cancelar_pressed"]
[connection signal="pressed" from="TextureRect/Siguiente" to="." method="_on_siguiente_pressed"]
[connection signal="pressed" from="TextureRect/Atras" to="." method="_on_atras_pressed"]
